# voxelegen

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
lib/: Makefile
res/: atlas.ppm  atlas_debug.ppm
shaders/: fragment.glsl  vertex.glsl
src/: Makefile  block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  main.c  main.rs  matrix.c  matrix.h  shader.wgsl  terrain.c  terrain.h  terrain_gen.c  terrain_gen.h  util.c  util.h
src/graphics/: mod.rs  shader.wgsl  texture.rs
src/graphics/math/: mod.rs
