[package]
name = "voxelegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
raw-window-handle = "0.6.0"
tokio = { version = "1.34.0", features = ["tokio-macros", "full"] }
wgpu = "0.18.0"
winit = { version = "0.29.3", features = ["rwh_06", "rwh_05"] }
